# TouchTool

./: .gitignore  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/release/: output-metadata.json
app/release/baselineProfiles/0/: 点击助手_240912_1433.dm
app/release/baselineProfiles/1/: 点击助手_240912_1433.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common.h  native-lib.cpp  native-lib.h  ocr_clipper.cpp  ocr_clipper.hpp  ocr_cls_process.cpp  ocr_crnn_process.cpp  ocr_crnn_process.h  ocr_db_post_process.cpp  ocr_db_post_process.h  ocr_ppredictor.cpp  ocr_ppredictor.h  ppredictor.cpp  ppredictor.h  predictor_input.cpp  predictor_input.h  predictor_output.cpp  predictor_output.h  preprocess.cpp  preprocess.h
app/src/main/res/color/: button_container_check.xml  button_container_error_check.xml  fill_button_background_check.xml  fill_button_background_error_check.xml  fill_button_background_normal_check.xml
app/src/main/res/drawable-anydpi/: icon_123.xml  icon_adb.xml  icon_add.xml  icon_app.xml  icon_apps.xml  icon_area.xml  icon_array.xml  icon_arrow_down.xml  icon_arrow_left.xml  icon_arrow_right.xml  icon_arrow_up.xml  icon_assignment.xml  icon_auto_play.xml  icon_auto_start.xml  icon_autoplay.xml  icon_back.xml  icon_battery.xml  icon_battery_android_full.xml  icon_bluetooth.xml  icon_calendar.xml  icon_calendar_month.xml  icon_cancel.xml  icon_capture.xml  icon_check.xml  icon_check_circle.xml  icon_close.xml  icon_color.xml  (+175 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+680 files in other folders)
